# robot-software

./: README.md
blackpill-f303cc-io-firmware/: Makefile  package.yml
blackpill-f303cc-io-firmware/src/: board.c  board.h  board_gpio.h  bootloader_config.c  debug.c  main.c  pwm.c  pwm.h
blackpill-f303cc-io-firmware/src/uavcan/: DigitalInput_pub.cpp  DigitalInput_pub.hpp  DigitalOutput_handler.cpp  DigitalOutput_handler.hpp  Reboot_handler.cpp  Reboot_handler.hpp  ServoPWM_handler.cpp  UAVCANRestart_handler.cpp  UAVCANRestart_handler.hpp  node.cpp
electron-firmware/src/uavcan/: data_packet_handler.cpp  data_packet_handler.hpp  node.cpp
lib/: CMakeLists.txt  list_uavcan_dsdl.py
lib/arm-cortex-tools/: mpu.c
lib/cmp/: cmp.c
lib/cmp/examples/: example1.c  example2.c
lib/cmp/test/: test.c
lib/cmp_mem_access/: cmp_mem_access.c  cmp_mem_access_test.cpp
lib/crc/: crc16.c  crc32.c
lib/crc/test/: crc16_test.cpp  crc32_test.cpp
lib/error/: error.h
lib/fatfs/: ff.c
lib/filter/: basic.c  iir.c
lib/filter/tests/: basic_test.cpp  iir_test.cpp
lib/msgbus/: messagebus.c
lib/msgbus/examples/chibios/: port.c
lib/msgbus/examples/chibios/STM32F302R8-Nucleo/: main.c
lib/msgbus/examples/posix/: demo.c  demo_watchgroups.c  port.c
lib/msgbus/tests/: atomicity.cpp  foreach.cpp  msgbus.cpp  new_topic_callbacks.cpp  signaling.cpp  test_cpp_interface.cpp  watchgroups.cpp
lib/msgbus/tests/mocks/: synchronization.cpp
lib/parameter/: parameter.c  parameter_msgpack.c  parameter_print.c
lib/parameter/include/parameter/: parameter_msgpack.h  parameter_print.h
lib/parameter/tests/: msgpack_test.cpp  parameter_print_test.cpp  parameter_test.cpp  parameter_types_test.cpp
lib/parameter_flash_storage/: flash_f3.c  flash_f4.c  parameter_flash_storage.c
lib/parameter_flash_storage/tests/: flash_mock.cpp  parameter_flash_storage.cpp
lib/pid/: pid.c
lib/pid/tests/: pid_test.cpp
lib/timestamp/: timestamp.c  timestamp_stm32.c  timestamp_test.cpp
master-firmware/protobuf/: strategy.proto
master-firmware/src/: commands.cpp  main.c  strategy.cpp
master-firmware/src/can/: electron_starter.cpp  electron_starter.hpp  sensor_handler.cpp  uavcan_node.cpp
master-firmware/src/gui/: AllyPage.h  PositionPage.h  ScorePage.h
master-firmware/src/lwip_bindings/: lwipthread.c
master-firmware/src/strategy/: score.cpp  state.cpp  state.h
motor-control-firmware/board/: board.h
motor-control-firmware/src/: main.c  mcuconf.h
proximity-beacon-firmware/src/: beacon_main.c
strategy_simulator/: main.cpp
tools/: uavcan_ip_interface.py
uavcan_data_types/cvra/io/: 20132.DigitalOutput.uavcan
uwb-beacon-firmware/src/: decawave_interface.c  main.c  ranging_thread.c  trace_points.h  uwb_protocol.c
uwb-beacon-firmware/src/uavcan/: topics_publisher.cpp
